test_regress/t/t_var_static.out
%Error-UNSUPPORTED: t/t_var_static.v:20:18: Unsupported: 'static' function/task variables
                                          : ... In instance t
   20 |       static int st = 2; st++; return st;
      |                  ^~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_var_static.v:30:18: Unsupported: 'static' function/task variables
                                          : ... In instance t
   30 |       static int st = 2; st++; return st;
      |                  ^~
%Error-UNSUPPORTED: t/t_var_static.v:40:18: Unsupported: 'static' function/task variables
                                          : ... In instance t
   40 |       static int st = 2; st++; return st;
      |                  ^~
%Error: Exiting due to
